--- a/函数节流.md
+++ b/函数节流.md
@@ -1,6 +1,15 @@
-[from](http://imweb.io/topic/577aa790ea7bb9b760c7adc3)
+---
+title: 函数节流
+date: 2016-07-28
+tags: javascript
+categories: 
+- javascript
+comments: true
+---
 
-函数节流：常用于onresize,scroll,mousemove,mousehover等连续触发的事件。
+[From](http://imweb.io/topic/577aa790ea7bb9b760c7adc3)
+
+函数节流：常用于onresize,scroll,mousemove,mousehover等连续触发的事件(隔断时间触发一次)。
 
 方法：
 
