--- a/起点H5分析.md
+++ b/起点H5分析.md
@@ -1,5 +1,11 @@
-起点大事件H5学习
-20160810 16:39
+---
+title: 起点大事件H5学习
+date: 2016-08-10
+tags: javascript H5
+categories: 
+- H5
+comments: true
+---
 
 [起点大事记 - 515粉丝节](http://m.qidian.com/ploy/20160515/qd/mockup/index.html)
 
