--- a/微信分享绝对是个坑.md
+++ b/微信分享绝对是个坑.md
@@ -1,3 +1,12 @@
+---
+title: 微信分享绝对是个坑
+date: 2016-08-08
+tags: javascript H5 微信分享
+categories: 
+- H5
+comments: true
+---
+
 没想到碰到的第一个大坑竟然是这种问题，原以为一个微信分享，不就是看着微信开发者文档，然后写几个配置参数就可以完成的么？就算开发者文档比较麻烦，像这种常用的功能不是应该公司早就封装好，拿来配置几个参数搞定的事情么！
 
 -----
